@@ -52,22 +52,22 @@ public class RankingExpressionsTestCase extends SchemaTestCase {
         RawRankProfile rawRankProfile = new RawRankProfile(functionsRankProfile, new QueryProfileRegistry(),
                 new ImportedMlModels(), new AttributeFields(search), deployProperties);
         List<Pair<String, String>> rankProperties = rawRankProfile.configProperties();
-        assertEquals(5, rankProperties.size());
+        assertEquals(6, rankProperties.size());
 
-        assertEquals("rankingExpression(titlematch$@126063073eb2deb.ab95cd69909927c).rankingScript", rankProperties.get(0).getFirst());
-        assertEquals("4 * 5 + 890", rankProperties.get(0).getSecond());
+        assertEquals("rankingExpression(titlematch$).rankingScript", rankProperties.get(2).getFirst());
+        assertEquals("var1 * var2 + 890", rankProperties.get(2).getSecond());
+
+        assertEquals("rankingExpression(artistmatch).rankingScript", rankProperties.get(3).getFirst());
+        assertEquals("78 + closeness(distance)", rankProperties.get(3).getSecond());
+
+        assertEquals("rankingExpression(firstphase).rankingScript", rankProperties.get(5).getFirst());
+        assertEquals("0.8 + 0.2 * rankingExpression(titlematch$@126063073eb2deb.ab95cd69909927c) + 0.8 * rankingExpression(titlematch$@c7e4c2d0e6d9f2a1.1d4ed08e56cce2e6) * closeness(distance)", rankProperties.get(5).getSecond());
 
         assertEquals("rankingExpression(titlematch$@c7e4c2d0e6d9f2a1.1d4ed08e56cce2e6).rankingScript", rankProperties.get(1).getFirst());
         assertEquals("7 * 8 + 890", rankProperties.get(1).getSecond());
 
-        assertEquals("rankingExpression(artistmatch).rankingScript", rankProperties.get(2).getFirst());
-        assertEquals("78 + closeness(distance)", rankProperties.get(2).getSecond());
-
-        assertEquals("vespa.rank.firstphase", rankProperties.get(3).getFirst());
-        assertEquals("rankingExpression(firstphase)", rankProperties.get(3).getSecond());
-
-        assertEquals("rankingExpression(firstphase).rankingScript", rankProperties.get(4).getFirst());
-        assertEquals("0.8 + 0.2 * rankingExpression(titlematch$@126063073eb2deb.ab95cd69909927c) + 0.8 * rankingExpression(titlematch$@c7e4c2d0e6d9f2a1.1d4ed08e56cce2e6) * closeness(distance)", rankProperties.get(4).getSecond());
+        assertEquals("rankingExpression(titlematch$@126063073eb2deb.ab95cd69909927c).rankingScript", rankProperties.get(0).getFirst());
+        assertEquals("4 * 5 + 890", rankProperties.get(0).getSecond());
     }
 
     @Test(expected = IllegalArgumentException.class)
